--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
+        android:screenOrientation="portrait"
+        android:fullBackupContent="false"
         android:theme="@style/Theme.SensorFingerprinting">
         <activity android:name="com.oscarcasarezruiz.sensorfingerprinting.SensorFingerprintActivity" />
         <activity android:name="com.oscarcasarezruiz.sensorfingerprinting.InstructionsActivity" />
